Kubernetes/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-rules
spec:
  rules:
  - host: springboot-v1.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-v1
          servicePort: 8080
  - host: springboot-v2.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-v2
          servicePort: 8080
